Сделал "Сделать удаление ценных мобов в последнюю очередь в лимитах мобов"

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -29,3 +29,96 @@ ignore-entity-types:
   - ITEM_FRAME
 
 world-limits: {}
+
+# Типы мобов по важности.
+# Сверху самые важные мобы.
+# Важные мобы удаляются в последнюю очередь.
+entity-type-priorities:
+  - VILLAGER
+  - ITEM_FRAME
+  - ARMOR_STAND
+  - RABBIT
+  - DROPPED_ITEM
+  - SHEEP
+  - PAINTING
+  - FALLING_BLOCK
+  - EXPERIENCE_ORB
+  - PIG
+  - COW
+  - SQUID
+  - WITHER_SKULL
+  - ZOMBIE_VILLAGER
+  - IRON_GOLEM
+  - THROWN_EXP_BOTTLE
+  - ARROW
+  - EGG
+  - PIG_ZOMBIE
+  - MUSHROOM_COW
+  - MINECART_CHEST
+  - MINECART_FURNACE
+  - MINECART_TNT
+  - MINECART_HOPPER
+  - CHICKEN
+  - WOLF
+  - BOAT
+  - OCELOT
+  - HORSE
+  - POLAR_BEAR
+  - FIREBALL
+  - SNOWBALL
+  - ENDER_PEARL
+  - ENDER_SIGNAL
+  - SMALL_FIREBALL
+  - SPLASH_POTION
+  - LLAMA
+  - MULE
+  - DONKEY
+  - PARROT
+  - SKELETON
+  - PRIMED_TNT
+  - FIREWORK
+  - HUSK
+  - SPECTRAL_ARROW
+  - SHULKER_BULLET
+  - ENDER_CRYSTAL
+  - LINGERING_POTION
+  - FISHING_HOOK
+  - SPIDER
+  - GHAST
+  - LIGHTNING
+  - WEATHER
+  - COMPLEX_PART
+  - TIPPED_ARROW
+  - SLIME
+  - CREEPER
+  - ZOMBIE
+  - ENDERMAN
+  - CAVE_SPIDER
+  - SILVERFISH
+  - SNOWMAN
+  - ZOMBIE_VILLAGER
+  - SKELETON_HORSE
+  - ZOMBIE_HORSE
+  - EVOKER_FANGS
+  - EVOKER
+  - VEX
+  - VINDICATOR
+  - ILLUSIONER
+  - BLAZE
+  - MAGMA_CUBE
+  - ENDER_DRAGON
+  - WITCH
+  - WITHER
+  - WITHER_SKELETON
+  - MINECART_MOB_SPAWNER
+  - AREA_EFFECT_CLOUD
+  - MINECART_COMMAND
+  - DRAGON_FIREBALL
+  - LEASH_HITCH
+  - STRAY
+  - LLAMA_SPIT
+  - GUARDIAN
+  - ELDER_GUARDIAN
+  - SHULKER
+  - ENDERMITE
+  - BAT
